--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,9 +1,15 @@
 .button {
     padding: 15px 30px;
     border: 0;
-    background-color: #6DCB71;
+    background-color: #07C17A;
+    transition: background-color 0.2s;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.button:hover {
+    background-color: #6DCB71;
 }
