--- a/src/components/loginForm/loginForm.module.css
+++ b/src/components/loginForm/loginForm.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 .card {
     background-color: #fff;
@@ -12,7 +12,7 @@
 .title {
     text-align: center;
     color: #003C25;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 22px;
     font-weight: 500;
     margin-bottom: 30px;
@@ -22,4 +22,14 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+@media screen and (max-width: 600px) {
+    .card {
+        width: 90%;
+    }
+    
+    .title {
+        font-size: 18px;
+    }
 }
