--- a/src/components/sideNavBar/sideNavBar.module.css
+++ b/src/components/sideNavBar/sideNavBar.module.css
@@ -3,3 +3,9 @@
     width: 300px;
     background-color: #87BF8A;
 }
+
+@media screen and (max-width: 600px) {
+    .sideNavBar {
+        width: 500px !important;
+    }
+}
