--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,8 +17,6 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -26,4 +24,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
