fix: Ajuste no template da aplicação.

--- a/src/components/mainContent/mainContent.module.css
+++ b/src/components/mainContent/mainContent.module.css
@@ -1,5 +1,6 @@
 .mainContainer {
     padding: 15px;
+    padding-top: 100px;
     margin-left: 300px;
     margin-right: 100px;
     color: #000;
@@ -9,5 +10,6 @@
     .mainContainer {
         margin-left: 0;
         margin-right: 0;
+        padding-top: 30px;
     }
 }
